2009-04-08  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc.erl: English fixes (thanks to Glenn Sieb)
	* src/mod_muc/mod_muc_log.erl: Likewise
	* src/mod_muc/mod_muc_room.erl: Likewise
	* src/mod_register.erl: Likewise
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Quickfix compilation errors.

	* src/mod_irc/mod_irc_connection.erl: Fix compilation warnings.

2009-04-01  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.5.txt: Added file for new release

2009-03-24  Badlop  <badlop@process-one.net>

	* src/ejabberd_sm.erl: Partially retract SVN r1976
	EJAB-300 (EJAB-890). Check default privacy list when account, not
	a specific session, receives a presence subscription
	stanza (EJAB-300).
	* src/ejabberd_c2s.erl: Likewise

2009-03-20  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: implement roster acces model (thanks
	to Andy Skelton)(EJAB-780)

2009-03-19  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Allow more environment variable overrides
	in ejabberdctl (thanks to Brian Cully)(EJAB-891)

2009-03-10  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.4.txt: Added file for new release

	* src/tls/tls_drv.c: Fix encryption problem for ejabberd_http
	after timeout (thanks to Alexey Shchepin)(EJAB-880)

2009-03-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix PEP with other domains and s2s
	(EJAB-825). Also fixes send last published items in subscription.

	* src/mod_pubsub/node_default.erl: minor typo fix

2009-03-09  Badlop  <badlop@process-one.net>

	* src/tls/tls_drv.c: Fix to support OpenSSL older than
	0.9.8f (EJAB-877)(thanks to Jonathan Schleifer)
	* doc/guide.tex: It is again supported OpenSSL older than 0.9.8f
	* doc/guide.html: Likewise

	* src/mod_proxy65/mod_proxy65_service.erl: if an ip option is not
	defined, the module takes an IP address of a local